--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "commit": "cz",
-    "prepare": "husky install"
+    "commit": "cz"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
